# cuda-puzzles

./: .clangd  .gitignore  CMakeLists.txt  README.md
.sisyphus/: boulder.json
.sisyphus/notepads/cuda-puzzles/: learnings.md
.sisyphus/notepads/lenet-cuda-puzzles/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: lenet-cuda-puzzles.md
common/: CMakeLists.txt  common.h  cuda_utils.h  mnist_loader.h  test_common.cu  test_data.h  test_utils.h
puzzles/: CMakeLists.txt
puzzles/puzzle_01_vector_add/: CMakeLists.txt  README.md  puzzle.cu  solution.cu  test_puzzle.cu
puzzles/puzzle_02_matmul/: CMakeLists.txt  README.md  puzzle.cu  solution.cu  test_puzzle.cu
puzzles/puzzle_03_fc_forward/: CMakeLists.txt  README.md  puzzle.cu  solution.cu  test_puzzle.cu
puzzles/puzzle_04_relu/: CMakeLists.txt  README.md  puzzle.cu  solution.cu  test_puzzle.cu
puzzles/puzzle_05_softmax_ce/: CMakeLists.txt  README.md  puzzle.cu  solution.cu  test_puzzle.cu
puzzles/puzzle_06_fc_backward/: CMakeLists.txt  README.md  puzzle.cu  solution.cu  test_puzzle.cu
puzzles/puzzle_07_conv_forward/: CMakeLists.txt  README.md  puzzle.cu  solution.cu  test_puzzle.cu
puzzles/puzzle_08_maxpool/: CMakeLists.txt  README.md  puzzle.cu  solution.cu  test_puzzle.cu
puzzles/puzzle_09_conv_backward_weights/: CMakeLists.txt  README.md  puzzle.cu  solution.cu  test_puzzle.cu
puzzles/puzzle_10_conv_backward_input/: CMakeLists.txt  README.md  puzzle.cu  solution.cu  test_puzzle.cu
puzzles/puzzle_11_sgd/: CMakeLists.txt  README.md  puzzle.cu  solution.cu  test_puzzle.cu
puzzles/puzzle_12_lenet_forward/: CMakeLists.txt  README.md  puzzle.cu  solution.cu  test_puzzle.cu
puzzles/puzzle_13_lenet_backward/: CMakeLists.txt  README.md  puzzle.cu  solution.cu  test_puzzle.cu
puzzles/puzzle_14_mnist_pipeline/: CMakeLists.txt  README.md  generate_mini_mnist.py  puzzle.cu  solution.cu  test_puzzle.cu
puzzles/puzzle_14_mnist_pipeline/data/: mini-images-idx3-ubyte  mini-labels-idx1-ubyte
puzzles/puzzle_15_training_loop/: CMakeLists.txt  README.md  puzzle.cu  solution.cu  test_puzzle.cu
