# Puzzle subdirectories will be added here
add_subdirectory(puzzle_01_vector_add)
add_subdirectory(puzzle_02_matmul)
add_subdirectory(puzzle_03_fc_forward)
add_subdirectory(puzzle_04_relu)
add_subdirectory(puzzle_05_softmax_ce)
add_subdirectory(puzzle_06_fc_backward)
add_subdirectory(puzzle_07_conv_forward)
add_subdirectory(puzzle_08_maxpool)
add_subdirectory(puzzle_09_conv_backward_weights)
add_subdirectory(puzzle_10_conv_backward_input)
add_subdirectory(puzzle_11_sgd)
add_subdirectory(puzzle_12_lenet_forward)
add_subdirectory(puzzle_13_lenet_backward)
add_subdirectory(puzzle_14_mnist_pipeline)
add_subdirectory(puzzle_15_training_loop)
